<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/itemPrefs" android:title="@string/prefs"
          android:icon="@android:drawable/ic_menu_preferences"></item>

    <item android:id="@+id/itemSort" android:title="@string/title_sort_races_by_time"
            android:icon="@android:drawable/ic_menu_sort_by_size"></item>
    <item android:id="@+id/itemDelete" android:title="@string/title_delete_race"
          android:icon="@android:drawable/ic_menu_delete"></item>
    <item android:id="@+id/itemEdit" android:title="@string/title_edit_race"
          android:icon="@android:drawable/ic_menu_edit"></item>
    <item android:id="@+id/itemAdd" android:title="@string/title_add_race"
          android:icon="@android:drawable/ic_menu_add"></item>

    <!--  -->
    <item android:id="@+id/itemToggleService" android:title="@string/title_services_start"
          android:icon="@android:drawable/ic_media_play"></item>
</menu>